# sparklepony

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  security.yml
benches/: extraction.rs
config/: blacklist.ron
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/filter/: email.rs  mod.rs  tld.rs
src/output/: csv.rs  mod.rs
src/processor/: mod.rs
src/progress/: mod.rs
src/pst/: extractor.rs  mod.rs
src/resource/: mod.rs
